@@ -237,7 +237,13 @@ def test_gui_upload_simple(mw, qtbot):
     assert dlg.dataset_id is not None
 
     common.wait_for_job(upload_queue=mw.panel_upload.jobs,
-                        dataset_id=dlg.dataset_id)
+                        dataset_id=dlg.dataset_id,
+                        set_job_done=False)
+
+    mw.panel_upload.widget_jobs.update_job_status()
+    QtWidgets.QApplication.processEvents(
+        QtCore.QEventLoop.ProcessEventsFlag.AllEvents, 500)
+    assert mw.database.get_dataset_dictionary(dlg.dataset_id)
 
 
 def test_gui_upload_task(mw, qtbot):
